Try changing executable name

--- a/meson.build
+++ b/meson.build
@@ -40,9 +40,9 @@ lines_dep = declare_dependency(
   link_with : [ lines_lib ],
 )
 
-nadeko_exe = executable(
-  'nadeko', [ 'main.c' ],
-  override_options : [ 'b_sanitize=address,undefined' ],
+main_exe = executable(
+  'main', [ 'main.c' ],
+  override_options : [ ],
   c_args : [ '-DSQLITE_CORE' ],
   dependencies : [ libarchive_dep, sqlite3_dep ],
 )
