--- a/meson.build
+++ b/meson.build
@@ -45,7 +45,7 @@ lines_dep = declare_dependency(
 
 nadeko_exe = executable(
   'nadeko-sqlite3', [ 'main.c' ],
-  override_options : [ 'b_sanitize=address,undefined' ],
+  override_options : [ ],
   c_args : [ '-DSQLITE_CORE' ],
   dependencies : [ libarchive_dep, sqlite3_dep ],
 )
