Try normalizing conan-based GitHub Actions using PIP installer

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - name: Install tool dependencies
       run: |
-        pip install conan
+        python3 -m pip install conan
     - uses: actions/checkout@v3
     - name: Configure profile
       run: |
