Combine all conan-based Actions workflows into one

--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -1,4 +1,4 @@
-name: windows
+name: conan
 
 on:
   pull_request:
@@ -6,7 +6,11 @@ on:
 
 jobs:
   create:
-    runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - name: Install tool dependencies
       run: |
